[package]
name = "maptime"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_blobject = { path = "../atomic_blobject" }
chrono = { version = "0.4.9", features = ["serde"] }
clap = "2.33.0"
hex = "0.3"
derive_more = "0.15.0"
parse_list = { path = "../parse_list" }
serde = "1.0.101"
serde_derive = "1.0.101"
structopt = "0.3.1"
